using System;

class Scripture
{
    
}
